--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,58 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  margin-bottom: 0px;
 }
 
-.App-link {
-  color: #61dafb;
+.Body {
+  background-color: #282c34;
+  margin-top: 0px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Navbar {
+  background-color: #282c34;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+  transition: all 0.3s ease; /* Sanfter Übergang */
+}
+
+.Navbar--scrolled {
+  padding-top: 5px;
+  padding-bottom: 5px;
+  font-size: 0.9em; /* Beispiel für eine verkleinerte Schriftgröße */
+}
+
+.Navbar ul {
+  list-style-type: none; /* Entfernt die Aufzählungszeichen */
+  margin: 0;
+  padding: 0;
+  display: flex; /* Aktiviert Flexbox */
+  justify-content: space-around; /* Zentriert und verteilt die Elemente gleichmäßig */
+}
+
+.Navbar li {
+  margin: 0 15px; /* Fügt etwas Abstand zwischen den Elementen hinzu */
+}
+
+.Navbar a {
+  color: white; /* Setzt die Schriftfarbe auf Weiß */
+  text-decoration: none; /* Entfernt Unterstreichungen von Links */
+  font-family: Arial, sans-serif; /* Setzt die Schriftart auf Arial */
+}
+
+.Bandfoto {
+  width: 99vw;       /* Breite des Bildes auf 100% der Viewport-Breite setzen */
+  height: auto;       /* Automatische Anpassung der Höhe */
+  margin-top: 10px;      /* Oberer Abstand auf 0 setzen */
+  margin-bottom: 10px; /* Unterer Abstand */
 }
