--- a/src/App.css
+++ b/src/App.css
@@ -57,3 +57,15 @@
   margin-top: 10px;      /* Oberer Abstand auf 0 setzen */
   margin-bottom: 10px; /* Unterer Abstand */
 }
+
+button {
+  display: inline-block;
+  background-color: #6bbe92;
+  border: 0;
+  width: 60px;
+  margin: 10px;
+  text-align: center;
+  color: #fff;
+  font-weight: bold;
+  font-size: 50px;
+}
