--- a/src/App.css
+++ b/src/App.css
@@ -51,21 +51,32 @@
   font-family: Arial, sans-serif; /* Setzt die Schriftart auf Arial */
 }
 
+.Tour-container {
+  background-color: #282c34;
+  color: white;
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-top: 0;
+  padding-bottom: 0;
+}
+
+.Tour-container ul {
+  list-style-type: none; /* Entfernt die Aufzählungszeichen */
+  padding-bottom: 0;
+}
+
+.Tour-container li {
+  margin: 0 15px; /* Fügt etwas Abstand zwischen den Elementen hinzu */
+}
+
 .Bandfoto {
   width: 99vw;       /* Breite des Bildes auf 100% der Viewport-Breite setzen */
   height: auto;       /* Automatische Anpassung der Höhe */
-  margin-top: 10px;      /* Oberer Abstand auf 0 setzen */
-  margin-bottom: 10px; /* Unterer Abstand */
+  margin-top: 0px;      /* Oberer Abstand auf 0 setzen */
+  margin-bottom: 40px; /* Unterer Abstand */
 }
 
-button {
-  display: inline-block;
-  background-color: #6bbe92;
-  border: 0;
-  width: 60px;
-  margin: 10px;
-  text-align: center;
-  color: #fff;
-  font-weight: bold;
-  font-size: 50px;
+.Tour-container h2 {
+  margin-top: 0;
+  margin-bottom: 0;
 }
