--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  background-color: #282c34;
 }
 
 .App-header {
@@ -62,7 +63,7 @@
 .Tour-container ul {
   list-style-type: none; /* Entfernt die Aufzählungszeichen */
   margin-top: 0;
-  margin-bottom: 0;
+  margin-bottom: 80px;
   padding-top: 0;
   padding-bottom: 0;
   list-style-type: none;
@@ -85,4 +86,10 @@
   padding-top: 0;
   padding-bottom: 0;
   text-align: center; /* Ändert die Ausrichtung auf zentriert */
+}
+
+.Carousel-container {
+  width: 50%;
+  margin: auto;
+  background-color: #282c34;
 }
