--- a/src/App.css
+++ b/src/App.css
@@ -97,4 +97,15 @@
   width: 50%;
   margin: auto;
   background-color: #282c34;
+  border: 1px solid #ccc;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+.Footer-main {
+  background-color: #282c34;
+  color: white;
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
