--- a/src/App.css
+++ b/src/App.css
@@ -113,3 +113,12 @@
 .Footer-main a {
   text-decoration: none; /* Entfernt den Unterstrich */
 }
+
+.About-main {
+  background-color: #282c34;
+  color: white;
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-top: 100px;
+  padding-bottom: 10px;
+}
