Style Ordner erstellt und .css Dateien hinzugefügt + betreffende Imports angepasst

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -55,5 +55,5 @@
   
 @font-face {
     font-family: 'EngraversOldEnglish';
-    src: url('./fonts/OPTIEngraversOldEnglish.otf') format('opentype');
+    src: url('../fonts/OPTIEngraversOldEnglish.otf') format('opentype');
   }
