--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -1,17 +1,15 @@
 /* Kerstin CSS */
 
 .About-kerstin {
-    display: flex; /* Verwende Flexbox */
+    display: flex;
   }
   
   .About-kerstin img {
-    /* Du möchtest das Bild in der zweiten Spalte haben, daher musst du die Reihenfolge ändern */
-    order: 2; /* Verschiebe das Bild in den zweiten Platz */
+    order: 2;
   }
   
-  .beschreibung_1 {
-    /* Überschrift und Absatz sollten in der ersten Spalte bleiben */
-    order: 1; /* Behalte die Reihenfolge bei */
+  .beschreibung_links {
+    order: 1;
     margin-top: auto;
     margin-bottom: auto;
   }
@@ -19,17 +17,15 @@
 /* Stephan CSS */
 
 .About-stephan {
-    display: flex; /* Verwende Flexbox */
+    display: flex;
   }
   
   .About-stephan img {
-    /* Du möchtest das Bild in der zweiten Spalte haben, daher musst du die Reihenfolge ändern */
-    order: 1; /* Verschiebe das Bild in den zweiten Platz */
+    order: 1;
   }
   
-  .beschreibung_2 {
-    /* Überschrift und Absatz sollten in der ersten Spalte bleiben */
-    order: 2; /* Behalte die Reihenfolge bei */
+  .beschreibung_rechts {
+    order: 2;
     margin-top: auto;
     margin-bottom: auto;
   }
@@ -37,17 +33,15 @@
 /* Bernd CSS */
 
 .About-bernd {
-    display: flex; /* Verwende Flexbox */
+    display: flex;
   }
   
   .About-bernd img {
-    /* Du möchtest das Bild in der zweiten Spalte haben, daher musst du die Reihenfolge ändern */
-    order: 2; /* Verschiebe das Bild in den zweiten Platz */
+    order: 2;
   }
   
-  .beschreibung_1 {
-    /* Überschrift und Absatz sollten in der ersten Spalte bleiben */
-    order: 1; /* Behalte die Reihenfolge bei */
+  .beschreibung_links {
+    order: 1;
     margin-top: auto;
     margin-bottom: auto;
   }
@@ -55,17 +49,15 @@
 /* Joerg CSS */
 
 .About-joerg {
-    display: flex; /* Verwende Flexbox */
+    display: flex;
   }
   
   .About-joerg img {
-    /* Du möchtest das Bild in der zweiten Spalte haben, daher musst du die Reihenfolge ändern */
-    order: 1; /* Verschiebe das Bild in den zweiten Platz */
+    order: 1;
   }
   
-  .beschreibung_2 {
-    /* Überschrift und Absatz sollten in der ersten Spalte bleiben */
-    order: 2; /* Behalte die Reihenfolge bei */
+  .beschreibung_rechts {
+    order: 2;
     margin-top: auto;
     margin-bottom: auto;
   }
@@ -73,17 +65,15 @@
 /* Matthias CSS */
 
 .About-matthias {
-    display: flex; /* Verwende Flexbox */
+    display: flex;
   }
   
   .About-matthias img {
-    /* Du möchtest das Bild in der zweiten Spalte haben, daher musst du die Reihenfolge ändern */
-    order: 2; /* Verschiebe das Bild in den zweiten Platz */
+    order: 2;
   }
   
-  .beschreibung_1 {
-    /* Überschrift und Absatz sollten in der ersten Spalte bleiben */
-    order: 1; /* Behalte die Reihenfolge bei */
+  .beschreibung_links {
+    order: 1;
     margin-top: auto;
     margin-bottom: auto;
   }
