--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -71,9 +71,13 @@
 .Tour-main {
   display: flex; /* Aktiviert Flexbox */
   justify-content: center; /* Zentriert den Inhalt horizontal */
+  margin-bottom: 40px;
 }
 
 .Tour-container {
+  border: 2px solid aliceblue; /* Rahmen mit einer Dicke von 2px und der Farbe aliceblue */
+  border-radius: 10px; /* Optional: Runde die Ecken des Rahmens ab */
+  padding: 20px; /* Füge Innenabstand zum Inhalt hinzu, damit der Inhalt nicht am Rahmen anliegt */
   order: 1; /* Ändert die Reihenfolge im Flex-Container */
   align-items: center; /* Zentriert den Inhalt vertikal */
   background-color: #282c34; /* Hintergrundfarbe */
@@ -95,6 +99,9 @@
 }
 
 .Tour-station {
+  border: 2px solid aliceblue; /* Rahmen mit einer Dicke von 2px und der Farbe aliceblue */
+  border-radius: 10px; /* Optional: Runde die Ecken des Rahmens ab */
+  padding: 20px; /* Füge Innenabstand zum Inhalt hinzu, damit der Inhalt nicht am Rahmen anliegt */
   order: 2; /* Ändert die Reihenfolge im Flex-Container */
   align-items: center; /* Zentriert den Inhalt vertikal */
   background-color: #282c34; /* Hintergrundfarbe */
