--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -57,7 +57,7 @@
   width: 99vw; /* Breite des Bildes auf 100% der Viewport-Breite setzen */
   height: auto; /* Automatische Anpassung der Höhe */
   margin-top: 0px; /* Oberen Abstand auf 0 setzen */
-  margin-bottom: 40px; /* Unteren Abstand */
+  margin-bottom: 5%; /* Unteren Abstand */
 }
 
 /* Body CSS */
@@ -71,7 +71,9 @@
 .Tour-main {
   display: flex; /* Aktiviert Flexbox */
   justify-content: center; /* Zentriert den Inhalt horizontal */
-  margin-bottom: 40px;
+  margin-bottom: 5%;
+  margin-left: 5%; /* Linker Abstand */
+  margin-right: 5%; /* Rechter Abstand */
 }
 
 .Tour-container {
@@ -131,11 +133,13 @@
 /* Carousel CSS */
 
 .Carousel-container {
-  width: 50%; /* Breite des Containers auf 50% des Elternelements setzen */
+  width: 90%; /* Breite des Containers auf 50% des Elternelements setzen */
   margin: auto; /* Zentriert den Container horizontal */
   background-color: #282c34; /* Hintergrundfarbe */
   border: 1px solid #ccc; /* Rand um den Container */
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); /* Schatten um den Container */
+  margin-left: 5%; /* Linker Abstand */
+  margin-right: 5%; /* Rechter Abstand */
 }
 
 /* Footer CSS */
