--- a/src/styles/Tourdaten.css
+++ b/src/styles/Tourdaten.css
@@ -1,26 +1,28 @@
-.Tourdaten-left {
-    display: flex;
-    justify-content: center; /* Zentriert den Inhalt horizontal */
-  }
-  
-  .Tourdaten-content {
-    display: flex;
-    width: 80%; /* Breite des Inhalts anpassen */
-  }
-  
-  .Rock-sommer-nacht-text {
-    flex: 1; /* Der Text nimmt so viel Platz wie möglich ein */
-  }
-  
-  .Rock-sommer-nacht-bild {
-    flex: 1; /* Das Bild nimmt so viel Platz wie möglich ein */
-    display: flex;
-    justify-content: center; /* Bild nach rechts ausrichten */
-    align-items: center; /* Zentriert das Bild vertikal */
-  }
-  
-  .Rock-sommer-nacht-bild img {
-    max-width: 100%; /* Maximale Breite des Bildes */
-    max-height: 100%; /* Maximale Höhe des Bildes */
-  }
-  
+.Tourdaten-main {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: column;
+  margin-left: 50px;
+  margin-right: 50px;
+}
+
+.Tourdaten-block {
+  display: flex;
+  flex-direction: row;
+  padding-bottom: 50px;
+  padding-top: 50px
+}
+
+.Tourdaten-text, .Tourdaten-bild {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.Tourdaten-bild img {
+  height: 300px;
+  width: auto;
+}
