--- a/src/styles/Tourdaten.css
+++ b/src/styles/Tourdaten.css
@@ -11,18 +11,27 @@
   display: flex;
   flex-direction: row;
   padding-bottom: 50px;
-  padding-top: 50px
+  padding-top: 50px;
 }
 
-.Tourdaten-text, .Tourdaten-bild {
+.Tourdaten-text,
+.Tourdaten-bild {
   flex: 1;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  padding: 20px;
 }
 
+
 .Tourdaten-bild img {
-  height: 300px;
-  width: auto;
+  width: 40vw;
+  height: 40vw;
+}
+
+@media (max-width: 700px) {
+  .Tourdaten-block {
+    flex-direction: column;
+  }
 }
