--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -12,16 +12,14 @@
   align-items: center; /* Zentriert die Elemente horizontal */
   font-size: calc(10px + 2vmin); /* Dynamische Schriftgröße basierend auf Viewport-Größe */
   color: white; /* Textfarbe */
-  margin-bottom: 0px; /* Unteren Abstand auf 0 setzen */
+  margin-bottom: 30px; /* Unteren Abstand auf 0 setzen */
 }
 
 .Bandfoto {
   justify-content: center;
   align-items: center;
-  background-position: center;
-  background-size: cover;
-  height: 100vh;
-  width: auto;
+  width: 100vw;
+  height: auto;
 }
 
 /* Navbar CSS */
@@ -76,7 +74,6 @@
   display: flex; /* Aktiviert Flexbox */
   justify-content: center; /* Zentriert den Inhalt horizontal */
   align-items: center;
-  
   border-radius: 10px; /* Optional: Runde die Ecken des Rahmens ab */
   border: 2px solid aliceblue; /* Rahmen mit einer Dicke von 2px und der Farbe aliceblue */
   margin-bottom: 5%;
