do some responsive and replace merch-link

--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -85,8 +85,8 @@
     font-size: 1.2rem;
     margin-top: auto;
     margin-bottom: auto;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 10%;
+    padding-right: 10%;
     text-align: left;
   }
 
@@ -95,8 +95,8 @@
     font-size: 1.2rem;
     margin-top: auto;
     margin-bottom: auto;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 10%;
+    padding-right: 10%;
     text-align: left;
     transform: translateX(-100%);
     transition: transform 1s;
@@ -107,8 +107,8 @@
     font-size: 1.2rem;
     margin-top: auto;
     margin-bottom: auto;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 10%;
+    padding-right: 10%;
     text-align: right;
     transform: translateX(100%);
     transition: transform 1s;
@@ -149,13 +149,24 @@
   }
   
   @media (max-width: 1000px) {
+    
+    .About-mathias, 
+    .About-kerstin
+     {
+      flex-direction: column-reverse;
+    }
+       
     .About-bernd,
-    .About-joerg,
-    .About-kerstin,
-    .About-mathias,
-    .About-stephan {
+    .About-stephan,
+    .About-joerg {
       flex-direction: column;
     }
 
-    
+    .About-bernd img,
+    .About-joerg img,
+    .About-kerstin img,
+    .About-mathias img,
+    .About-stephan img {
+      height: 100%;
+    }
   }
